fixed styling, added spacing

--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -3,8 +3,11 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
 }
+/*
+TODO: add breakpoint for mobile, flex-wrap: wrap
+*/
 
 .image {
   background-color: white;
@@ -13,7 +16,6 @@
   transition: 0.3s;
   border-radius: 50%;
   margin-right: 30px;
-  margin-bottom: 20px;
   border: 2px solid transparent;
 }
 
@@ -29,7 +31,7 @@
   padding-bottom: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  max-width: 500px;
+
   font-size: 1.1em;
 
   font-weight: bolder;
@@ -41,5 +43,5 @@
 }
 
 #profile {
-  max-width: 200px;
+  max-width: 250px;
 }
