--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -3,6 +3,7 @@
   list-style: none;
   margin-left: 30px;
   margin-right: 30px;
+  margin-top: 25px;
   flex-wrap: wrap;
 }
 
