--- a/src/components/styles/ProjectItem.css
+++ b/src/components/styles/ProjectItem.css
@@ -3,7 +3,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   padding: 30px;
-  margin: 10px;
+  margin: 25px;
   width: 100%;
   border: 2px solid transparent;
   font-weight: bolder;
@@ -26,7 +26,7 @@
 }
 
 .project-outer-container {
-  margin-bottom: 50px;
+  margin-top: 100px;
 }
 
 .text-card > a {
